fix(event-picker): preview card overflow style error

--- a/src/event-picker/preview/style/index.less
+++ b/src/event-picker/preview/style/index.less
@@ -9,7 +9,8 @@
   box-shadow: inset 0 -1px 0 0 #ebedf5;
   height: calc(100% + 94px);
   top: -94px;
-  overflow: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
   background-color: #fff;
   // position: absolute;
   // padding: 16px 0;
